chore: Fixing icons overlapping sticky header on health page (#2292)

--- a/site/src/pages/component-health.scss
+++ b/site/src/pages/component-health.scss
@@ -15,6 +15,7 @@
   thead,
   tfoot {
     position: sticky;
+    z-index: 1;
   }
 
   tfoot {
